@@ -5,6 +5,7 @@ import com.google.firebase.messaging.FirebaseMessagingException;
 import com.google.firebase.messaging.Message;
 import com.google.firebase.messaging.Notification;
 import jakarta.transaction.Transactional;
+import jakarta.validation.constraints.Null;
 import org.safecircle.backend.dtos.*;
 import org.safecircle.backend.dtos.ActiveAlertDTO;
 import org.safecircle.backend.dtos.FcmTokenDTO;
@@ -69,13 +70,38 @@ public class AlertService {
         this.circleAlertRepository = circleAlertRepository;
     }
 
-    public void sendNotification(String token, String alertType, String description, BigDecimal latitude, BigDecimal longitude, long userId, String firstname, String lastname) {
+    public void sendNotificationUnSafe(String token, String alertType, String description, BigDecimal latitude, BigDecimal longitude, long userId) {
         RestTemplate restTemplate = new RestTemplate();
 
         // Create JSON payload
         String payload = String.format(
-                "{\"to\":\"%s\",\"title\":\"%s\",\"body\":\"%s\",\"data\":{\"latitude\":\"%s\",\"longitude\":\"%s\"}}",
-                token, alertType, description, latitude, longitude
+                "{\"to\":\"%s\",\"title\":\"%s\",\"body\":\"%s\",\"data\":{\"latitude\":\"%s\",\"longitude\":\"%s\",\"userId\":\"%s\"}}",
+                token, alertType, description, latitude, longitude, userId
+        );
+
+        // Set headers
+        HttpHeaders headers = new HttpHeaders();
+        headers.set("Content-Type", "application/json");
+
+        // Create HTTP request
+        HttpEntity<String> request = new HttpEntity<>(payload, headers);
+
+        try {
+            ResponseEntity<String> response = restTemplate.postForEntity(EXPO_PUSH_URL, request, String.class);
+            System.out.println("Notification sent to token: " + token + ". Response: " + response.getBody());
+        } catch (Exception e) {
+            System.err.println("Failed to send notification to token: " + token);
+            e.printStackTrace();
+        }
+    }
+
+    public void sendNotificationSOS(String token, String alertType, String description, BigDecimal latitude, BigDecimal longitude, long userId) {
+        RestTemplate restTemplate = new RestTemplate();
+
+        // Create JSON payload
+        String payload = String.format(
+                "{\"to\":\"%s\",\"title\":\"%s\",\"body\":\"%s\",\"data\":{\"latitude\":\"%s\",\"longitude\":\"%s\",\"userId\":\"%s\"}}",
+                token, alertType, description, latitude, longitude, userId
         );
 
         // Set headers
@@ -95,7 +121,7 @@ public class AlertService {
     }
 
     public ResponseEntity<String> sendAlert(long userId, AlertDTO alert) {
-        if(!userService.isUserValid(alert.getUserId())){
+        if(!userService.isUserValid(userId)){
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(UserService.USER_NOT_FOUND);
         }
 
@@ -107,9 +133,9 @@ public class AlertService {
     }
 
     public ResponseEntity<String> sendUnsafeAlert(long userid, AlertDTO alert) {
-        User user = userService.getUserById(alert.getUserId());
+        User user = userService.getUserById(userid);
 
-        if (!circleService.isUserInCircles(alert.getUserId(), alert.getCircles())) {
+        if (!circleService.isUserInCircles(userid, alert.getCircles())) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("User is not in circles he requested to send to");
         }
 
@@ -142,8 +168,7 @@ public class AlertService {
             }
             List<FcmToken> tokens = fcmTokenRepository.findByUser(userInCircle);
             if (!tokens.isEmpty()) {
-                FcmToken token = tokens.getFirst();
-
+                FcmToken token = tokens.get(0);
                 Location locationToSend;
                 if (alertSave.getFirstNotification()){
                     locationToSend = alertLocation;
@@ -152,15 +177,13 @@ public class AlertService {
                     locationToSend = user.getLocation();
                 }
 
-                sendNotification(
+                sendNotificationUnSafe(
                         token.getFcmToken(),
                         "Unsafe Alert: " + user.getFirstName() + " " + user.getLastName(),
                         alert.getDescription(),
                         locationToSend.getLatitude(),
                         locationToSend.getLongitude(),
-                        alert.getUserId(),
-                        user.getFirstName(),
-                        user.getLastName()
+                        user.getUserId()
                 );
                 notifiedUserIds.add(userInCircle.getUserId());
             }
@@ -192,7 +215,6 @@ public class AlertService {
 
         alert.setisActive(false);
         alert.setUpdatedAt(LocalDateTime.now());
-
         if (alert.getUpdatedAt() != null) {
             Duration duration = Duration.between(activeAlert.getCreatedAt(), alert.getUpdatedAt());
             String formattedDuration = formatDuration(duration);
@@ -225,8 +247,37 @@ public class AlertService {
         System.out.println("Checked for alerts older than 12 hours.");
     }
 
+    @Transactional
+    @Scheduled(fixedRate = 300000)
+    public void stopAlertsAfterDuration() {
+        List<Alert> activeAlerts = alertRepository.findByIsActive(true);
+
+        for (Alert alert : activeAlerts) {
+            if (alert.getStatus() == SafetyStatus.UNSAFE) {
+                String durationString = alert.getDurationOfAlert();
+                if (durationString == null || durationString.isEmpty()) {
+                    System.err.println("Skipping alert with null or empty duration: " + alert);
+                    continue;
+                }
+
+                try {
+                    Duration duration = Duration.parse(durationString);
+                    if (alert.getCreatedAt().plus(duration).isBefore(LocalDateTime.now())) {
+                        alert.setActive(false);
+                        alertRepository.save(alert);
+                        System.out.println("Alert stopped for user ID: " + alert.getUser().getUserId());
+                    }
+                } catch (Exception e) {
+                    System.err.println("Error processing alert: " + alert);
+                    e.printStackTrace();
+                }
+            }
+        }
+        System.out.println("Checked for alerts older than 12 hours.");
+    }
+
         public ResponseEntity<String> sendSOSAlert(long userId, AlertDTO alert) {
-        User user = userService.getUserById(alert.getUserId());
+        User user = userService.getUserById(userId);
         List<User> users = userRepository.findAllByLocationIsNotNull();
 
         Location alertLocation = new Location(alert.getLocation().latitude(), alert.getLocation().longitude());
@@ -260,15 +311,13 @@ public class AlertService {
                     locationToSend = user.getLocation();
                 }
 
-                    sendNotification(
+                    sendNotificationSOS(
                             token.getFcmToken(),
                             "SOS Alert: " + alert.getStatus(),
                             alert.getDescription(),
                             locationToSend.getLatitude(),
                             locationToSend.getLongitude(),
-                            userId,
-                            user.getFirstName(),
-                            user.getLastName()
+                            user.getUserId()
                     );
                     notifiedUserIds.add(userInArea.getUserId());
 
@@ -340,8 +389,144 @@ public class AlertService {
                     alert.getUser().getFirstName(),
                     alert.getUser().getLastName(),
                     alert.getStatus(),
-                    alert.getDescription()
+                    alert.getDescription(),
+                        alert.getCreatedAt()
                 ))
                 .collect(Collectors.toList());
     }
+
+    public List<RequestAlertDTO> getLatestSOS() {
+        return alertRepository.findByCreatedAtAfterAndStatus(LocalDateTime.now().minusDays(1), SafetyStatus.SOS).stream()
+                .map(alert -> new RequestAlertDTO(
+                        new LocationDTO(alert.getLocation().getLatitude(), alert.getLocation().getLongitude()),
+                        alert.getUser().getFirstName(),
+                        alert.getUser().getLastName(),
+                        alert.getStatus(),
+                        alert.getDescription(),
+                        alert.getCreatedAt()
+                ))
+                .collect(Collectors.toList());
+    }
+
+
+    public List<RequestAlertDTO> getAllAlertsByCircleIdAndUserId(long userId, long circleId) {
+        User user = userService.getUserById(userId);
+        Circle circle = circleService.getCircleById(circleId);
+        List<CircleUser> circleUsers = circleUserRepository.findByUser(user);
+        List<CircleAlert> circleAlerts = circleAlertRepository.findByCircle(circle);
+
+        for (CircleUser circleUser : circleUsers) {
+            if (circleService.isUserInCircle(circleId, circleUser.getUser().getUserId())) {
+                List<RequestAlertDTO> circleAlertDTO = new ArrayList<>();
+                for (CircleAlert circleAlert : circleAlerts) {
+                    if(circleAlert.getAlert().getActive() && circleAlert.getAlert().getUser().getUserId()==userId) {
+                        circleAlertDTO.add(new RequestAlertDTO(
+                                new LocationDTO(circleAlert.getAlert().getLocation().getLatitude(), circleAlert.getAlert().getLocation().getLongitude()),
+                                circleAlert.getAlert().getUser().getFirstName(),
+                                circleAlert.getAlert().getUser().getLastName(),
+                                circleAlert.getAlert().getStatus(),
+                                circleAlert.getAlert().getDescription(),
+                                circleAlert.getAlert().getCreatedAt()
+                        ));
+                    }
+                }
+                return circleAlertDTO;
+            }
+        }
+        return new ArrayList<>();
+    }
+
+    public List<RequestAlertDTO> getAllAlertsByCircleId(long circleId) {
+        Circle circle = circleService.getCircleById(circleId);
+        List<CircleAlert> circleAlerts = circleAlertRepository.findByCircle(circle);
+
+        List<RequestAlertDTO> circleAlertDTO = new ArrayList<>();
+        for (CircleAlert circleAlert : circleAlerts) {
+            if (circleAlert.getAlert().getActive()) {
+                circleAlertDTO.add(new RequestAlertDTO(
+                        new LocationDTO(circleAlert.getAlert().getLocation().getLatitude(), circleAlert.getAlert().getLocation().getLongitude()),
+                        circleAlert.getAlert().getUser().getFirstName(),
+                        circleAlert.getAlert().getUser().getLastName(),
+                        circleAlert.getAlert().getStatus(),
+                        circleAlert.getAlert().getDescription(),
+                        circleAlert.getAlert().getCreatedAt()
+                ));
+            }
+        }
+        return circleAlertDTO;
+    }
+
+
+    public List<RequestAlertDTO> getAllAlertsByUserid(long userId) {
+        User user = userService.getUserById(userId);
+        List<Alert> alerts = alertRepository.findByUser(user);
+        List<RequestAlertDTO> circleAlertDTO = new ArrayList<>();
+        for (Alert alert : alerts) {
+            if (alert.getStatus().equals(SafetyStatus.UNSAFE)) {
+                Set<CircleAlert> circleAlerts = alert.getCircleAlerts();
+                for (CircleAlert circleAlert : circleAlerts) {
+                    if (circleService.isUserInCircle(circleAlert.getCircle().getCircleId(), alert.getUser().getUserId())) {
+                        circleAlertDTO.add(new RequestAlertDTO(
+                                new LocationDTO(circleAlert.getAlert().getLocation().getLatitude(), circleAlert.getAlert().getLocation().getLongitude()),
+                                circleAlert.getAlert().getUser().getFirstName(),
+                                circleAlert.getAlert().getUser().getLastName(),
+                                circleAlert.getAlert().getStatus(),
+                                circleAlert.getAlert().getDescription(),
+                                circleAlert.getAlert().getCreatedAt()
+                        ));
+                    }
+                }
+            }
+
+            if (alert.getStatus().equals(SafetyStatus.SOS)) {
+                circleAlertDTO.add(new RequestAlertDTO(
+                        new LocationDTO(alert.getLocation().getLatitude(), alert.getLocation().getLongitude()),
+                        alert.getUser().getFirstName(),
+                        alert.getUser().getLastName(),
+                        alert.getStatus(),
+                        alert.getDescription(),
+                        alert.getCreatedAt()
+                ));
+            }
+
+        }
+        return circleAlertDTO;
+    }
+
+    public List<RequestAlertDTO> getAllActiveAlertsByUserid(long userId) {
+        User user = userService.getUserById(userId);
+        List<Alert> alerts = alertRepository.findByUser(user);
+        List<RequestAlertDTO> circleAlertDTO = new ArrayList<>();
+        for (Alert alert : alerts) {
+            if (alert.getStatus().equals(SafetyStatus.UNSAFE) && alert.getActive()) {
+                Set<CircleAlert> circleAlerts = alert.getCircleAlerts();
+                for (CircleAlert circleAlert : circleAlerts) {
+                    if (circleService.isUserInCircle(circleAlert.getCircle().getCircleId(), alert.getUser().getUserId())) {
+                        circleAlertDTO.add(new RequestAlertDTO(
+                                new LocationDTO(circleAlert.getAlert().getLocation().getLatitude(), circleAlert.getAlert().getLocation().getLongitude()),
+                                circleAlert.getAlert().getUser().getFirstName(),
+                                circleAlert.getAlert().getUser().getLastName(),
+                                circleAlert.getAlert().getStatus(),
+                                circleAlert.getAlert().getDescription(),
+                                circleAlert.getAlert().getCreatedAt()
+                        ));
+                    }
+                }
+            }
+
+            if (alert.getStatus().equals(SafetyStatus.SOS) && alert.getActive()) {
+                circleAlertDTO.add(new RequestAlertDTO(
+                        new LocationDTO(alert.getLocation().getLatitude(), alert.getLocation().getLongitude()),
+                        alert.getUser().getFirstName(),
+                        alert.getUser().getLastName(),
+                        alert.getStatus(),
+                        alert.getDescription(),
+                        alert.getCreatedAt()
+                ));
+            }
+
+        }
+        return circleAlertDTO;
+    }
+
 }
